feat: disable server mods on client side and add mods

--- a/curseforge-pack/modlist.html
+++ b/curseforge-pack/modlist.html
@@ -23,6 +23,7 @@
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/create-enchantment-industry">Create: Enchantment Industry (by DragonsPlus)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/jade">Jade 🔍 (by Snownee)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/farmers-delight">Farmer's Delight (by vectorwing)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/more-mc-music-discs">More Music Discs [Fabric/Forge/NeoForge] (by Mars)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/bookshelf">Bookshelf (by DarkhaxDev)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/mekanism">Mekanism (by bradyaidanc)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/clumps">Clumps (by Jaredlll08)</a></li>
@@ -35,15 +36,18 @@
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/chipped">Chipped (by terrariumearth)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/minecolonies">MineColonies (by Raycoms)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/emotecraft-forge">Emotecraft (Forge) (by KosmX)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/better-advancements">Better Advancements (by way2muchnoise)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/appleskin">AppleSkin (by squeek502)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/bluemap">BlueMap (by TBlueF)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/immediatelyfast">ImmediatelyFast (by RaphiMC)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/living-things">Living Things (by Buecher_wurm)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/handcrafted">Handcrafted (by terrariumearth)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/create-misc-and-things">Create : Misc & Things (by To0pa)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/sodium-extra">Sodium Extra (by FlashyReese)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/cristel-lib">Cristel Lib (by Cristelknight)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/simple-planes">Simple Planes (Forge) (by przemykomo)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/irisshaders">Iris Shaders (by coderbot)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/deimos-fabric-forge-neoforge">Deimos Lib (by Mars)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/mekanism-generators">Mekanism Generators (by bradyaidanc)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/shaders/complementary-reimagined">Complementary Shaders - Reimagined (by EminGT)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/sound-physics-remastered">Sound Physics Remastered (by henkelmax)</a></li>
@@ -86,6 +90,7 @@
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/mekanism-additions">Mekanism Additions (by bradyaidanc)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/balm">Balm (by BlayTheNinth)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/watermedia">WATERMeDIA: Multimedia API (by SrRapero720)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/reeses-sodium-options">Reese's Sodium Options (by FlashyReese)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/serene-seasons">Serene Seasons (by TheAdubbz)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/chunky-border-forge">Chunky Border (Forge/NeoForge) (by pop4959)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/copycats">Create: Copycats+ (by Lysine)</a></li>
