feat: add Expanded Delight and Display Delight mods

--- a/curseforge-pack/modlist.html
+++ b/curseforge-pack/modlist.html
@@ -36,6 +36,7 @@
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/chipped">Chipped (by terrariumearth)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/minecolonies">MineColonies (by Raycoms)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/emotecraft-forge">Emotecraft (Forge) (by KosmX)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/expanded-delight">Expanded Delight (by ianm1647)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/better-advancements">Better Advancements (by way2muchnoise)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/appleskin">AppleSkin (by squeek502)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/bluemap">BlueMap (by TBlueF)</a></li>
@@ -59,6 +60,7 @@
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/sophisticated-backpacks">Sophisticated Backpacks (by P3pp3rF1y)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/yawp">Yet Another World Protector (by z0rdak)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/worldedit">WorldEdit (by sk89q)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/display-delight">Display Delight (by jkvin114)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/jadecolonies">JadeColonies (by uecasm)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/sophisticated-core">Sophisticated Core (by P3pp3rF1y)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/createaddition">Create Crafts & Additions (by MRHminer)</a></li>
@@ -83,9 +85,9 @@
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/waystones">Waystones (by BlayTheNinth)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/prometheus-exporter">Prometheus Exporter (by cpburnz)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/sophisticated-storage-create-integration">Sophisticated Storage Create Integration (by P3pp3rF1y)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/camera-mod">Camera Mod (by henkelmax)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/biomes-o-plenty">Biomes O' Plenty (by Forstride)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/falling-tree">FallingTree (by rakambda)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/biomes-o-plenty">Biomes O' Plenty (by Forstride)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/camera-mod">Camera Mod (by henkelmax)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/enchantment-descriptions">Enchantment Descriptions (by DarkhaxDev)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/mekanism-additions">Mekanism Additions (by bradyaidanc)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/balm">Balm (by BlayTheNinth)</a></li>
@@ -95,7 +97,7 @@
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/chunky-border-forge">Chunky Border (Forge/NeoForge) (by pop4959)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/copycats">Create: Copycats+ (by Lysine)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/structurize">Structurize (by Raycoms)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/falling-leaves-forge">Falling Leaves (NeoForge/Forge) (by Cheaterpaul)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/sophisticated-storage">Sophisticated Storage (by P3pp3rF1y)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/falling-leaves-forge">Falling Leaves (NeoForge/Forge) (by Cheaterpaul)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/mekanism-tools">Mekanism Tools (by bradyaidanc)</a></li>
 </ul>
