feat: update mods to latest version and add new mods
- Stock Market (by KROIA)
- Easy NPC: Config UI (by Kaworru)
- Security Craft (by Geforce132)
- Architectury API (by shedaniel)
- Easy NPC (by Kaworru)
- BankSystem (by KROIA)

--- a/curseforge-pack/modlist.html
+++ b/curseforge-pack/modlist.html
@@ -1,6 +1,7 @@
 ﻿<ul>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/towntalk">TownTalk (by Raycoms)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/selene">Moonlight Lib (by MehVahdJukaar)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/stockmarket">Stock Market (by KROIA)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/resourceful-lib">Resourceful Lib (by ThatGravyBoat)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/texture-packs/faithful-32x">Faithful 32x (by Faithful_Resource_Pack)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/create-stuff-additions">Create Stuff 'N Additions (by Furti_Two)</a></li>
@@ -51,12 +52,16 @@
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/deimos-fabric-forge-neoforge">Deimos Lib (by Mars)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/mekanism-generators">Mekanism Generators (by bradyaidanc)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/shaders/complementary-reimagined">Complementary Shaders - Reimagined (by EminGT)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/easy-npc-config-ui">Easy NPC: Config UI (by Kaworru)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/security-craft">Security Craft (by Geforce132)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/sound-physics-remastered">Sound Physics Remastered (by henkelmax)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/domum-ornamentum">Domum Ornamentum (by OrionOnline)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/framedblocks">FramedBlocks (by XFactHD)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/map-atlases-forge">Map Atlases [Forge] (by MehVahdJukaar)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/create-jetpack">Create Jetpack (by possible_triangle)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/waterframes">WATERFrAMES: Multimedia Displays (by SrRapero720)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/architectury-api">Architectury API (by shedaniel)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/easy-npc">Easy NPC (by Kaworru)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/sophisticated-backpacks">Sophisticated Backpacks (by P3pp3rF1y)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/yawp">Yet Another World Protector (by z0rdak)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/worldedit">WorldEdit (by sk89q)</a></li>
@@ -72,6 +77,7 @@
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/glitchcore">GlitchCore (by TheAdubbz)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/jei">Just Enough Items (JEI) (by mezz)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/ambientsounds">AmbientSounds 6 (by CreativeMD)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/banksystem">BankSystem (by KROIA)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/blockui">BlockUI (by Raycoms)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/geckolib">GeckoLib (by Gecko)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/create-better-fps">Create Better FPS (by moepus)</a></li>
@@ -85,9 +91,9 @@
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/waystones">Waystones (by BlayTheNinth)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/prometheus-exporter">Prometheus Exporter (by cpburnz)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/sophisticated-storage-create-integration">Sophisticated Storage Create Integration (by P3pp3rF1y)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/falling-tree">FallingTree (by rakambda)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/biomes-o-plenty">Biomes O' Plenty (by Forstride)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/camera-mod">Camera Mod (by henkelmax)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/biomes-o-plenty">Biomes O' Plenty (by Forstride)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/falling-tree">FallingTree (by rakambda)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/enchantment-descriptions">Enchantment Descriptions (by DarkhaxDev)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/mekanism-additions">Mekanism Additions (by bradyaidanc)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/balm">Balm (by BlayTheNinth)</a></li>
@@ -97,7 +103,7 @@
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/chunky-border-forge">Chunky Border (Forge/NeoForge) (by pop4959)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/copycats">Create: Copycats+ (by Lysine)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/structurize">Structurize (by Raycoms)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/sophisticated-storage">Sophisticated Storage (by P3pp3rF1y)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/falling-leaves-forge">Falling Leaves (NeoForge/Forge) (by Cheaterpaul)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/sophisticated-storage">Sophisticated Storage (by P3pp3rF1y)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/mekanism-tools">Mekanism Tools (by bradyaidanc)</a></li>
 </ul>
